refactor callbackhell to rxfengshui

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "contentful-ts-type-generator",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Typescript type declaration file generator from Contentful models",
   "main": "generateContentfulTypes.js",
   "scripts": {
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/arimkevi/contentful-ts-type-generator#readme",
   "dependencies": {
     "commander": "^2.19.0",
-    "contentful-management": "^5.4.0"
+    "contentful-management": "^5.4.0",
+    "rx": "^4.1.0"
   }
 }
